--- a/webpack/4.4_loadery/src/containers/App.css
+++ b/webpack/4.4_loadery/src/containers/App.css
@@ -10,3 +10,10 @@
     width: 100vw;
     height: 100vh;
 }
+
+.todo{
+    border: 1px solid grey;
+    padding: 10px;
+    margin: 10px;
+    background-color: whitesmoke;
+}
