--- a/mern-starter/client/modules/Post/components/PostListItem/PostListItem.css
+++ b/mern-starter/client/modules/Post/components/PostListItem/PostListItem.css
@@ -28,6 +28,10 @@
   margin-bottom: 8px;
 }
 
+.post-action {
+  text-align: right;
+}
+
 .post-action a{
   color: #555;
   text-decoration: none;
@@ -37,6 +41,23 @@
 
 .post-action a:hover{
   color: #EF5350;
+}
+
+.post-vote {
+  font-size: 16px;
+  margin-bottom: 16px;
+  color: dodgerblue;
+}
+
+.post-thumb a {
+  color: #555;
+  text-decoration: none;
+  font-size: 14px;
+  font-style: italic;
+}
+
+.post-thumb a:hover {
+  color: gold;
 }
 
 .divider{
