--- a/kanban/client/modules/Lane/Lane.css
+++ b/kanban/client/modules/Lane/Lane.css
@@ -1,4 +1,28 @@
 /* Lane styles */
 .addLane {
+
+}
+
+.lane {
+
+}
+
+.LaneHeader {
+
+}
+
+.LaneAddNote {
+
+}
+
+.LaneName {
+
+}
+
+.LaneDelete {
     
 }
+
+
+
+
